website header, footer, nav-bar

--- a/src/template.html
+++ b/src/template.html
@@ -7,9 +7,59 @@
         <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
+        <script src="https://kit.fontawesome.com/78fefce92e.js" crossorigin="anonymous"></script>
         <title>todo-list</title>
     </head>
     <body>
-        Hello, World!
+        <header class="header">
+            <div class="logo-container">
+                <div class="logo">
+                    <img src="./imgs/logo.png" alt="checkmark-logo" class="logo-img"/>
+                    <h1 class="logo-text">Todo list</h1>
+                </div>
+            </div>
+        </header>
+        <div class="main">
+            <nav class="nav">
+                <div class="nav-icon">
+                    <i class="fas fa-inbox fa-2x"></i>
+                    <p>Inbox</p>
+                </div>
+                <div class="nav-icon">
+                    <i class="fas fa-calendar-day fa-2x"></i>
+                    <p>Today</p>
+                </div>
+                <div class="nav-icon">
+                    <i class="fas fa-calendar-week fa-2x"></i>
+                    <p>Week</p>
+                </div>
+                <div class="nav-icon">
+                    <i class="fas fa-project-diagram fa-2x"></i>
+                    <p>Projects</p>
+                </div>
+                <div class="nav-icon">
+                    <i class="fas fa-tags fa-2x"></i>
+                    <p>Tags</p>
+                </div>
+            </nav>
+            <div class="content">
+                <div class="content-title">
+                    Hello
+                </div>
+                <div class="projects-container">
+                    World
+                </div>
+            </div>
+        </div>
+        <footer class="footer">
+            <p>Github:</p>
+            <div class="link">
+                <a href="https://github.com/egoist000">egoist000</a>
+                <i class="fab fa-github-alt fa-lg"></i>
+            </div>
+        </footer>
     </body>
 </html>
