sidebar, content title

--- a/src/template.html
+++ b/src/template.html
@@ -25,6 +25,10 @@
         <div class="main">
             <nav class="nav">
                 <div class="nav-icon">
+                    <i class="fa-solid fa-circle-user fa-2x"></i>
+                    <p>Account</p>
+                </div>
+                <div class="nav-icon">
                     <i class="fas fa-inbox fa-2x"></i>
                     <p>Inbox</p>
                 </div>
@@ -36,7 +40,7 @@
                     <i class="fas fa-calendar-week fa-2x"></i>
                     <p>Week</p>
                 </div>
-                <div class="nav-icon">
+                <div class="nav-icon active">
                     <i class="fas fa-project-diagram fa-2x"></i>
                     <p>Projects</p>
                 </div>
@@ -45,12 +49,30 @@
                     <p>Tags</p>
                 </div>
             </nav>
-            <div class="content">
-                <div class="content-title">
-                    Hello
+            <div class="sidebar">
+                <div class="sidebar-item">
+                    <div class="icons-set">
+                        <i class="fas fa-crow"></i>
+                        <i class="fas fa-cat"></i>
+                        <i class="fas fa-bug"></i>
+                        <i class="fas fa-cog"></i>
+                        <i class="fas fa-cocktail"></i>
+                        <i class="fas fa-coffee in-use"></i>
+                        <i class="fas fa-book-dead"></i>
+                        <i class="fas fa-bomb"></i>
+                    </div>
+                    <h4 class="item-name">Hello, World!</h4>
                 </div>
-                <div class="projects-container">
-                    World
+            </div>
+            <div class="content">
+                <div class="content-information">
+                    <div class="content-header">
+                        <h1 class="content-title">Projects</h1>
+                        <small class="stats">1 projects, 0 active todos</small>
+                    </div>
+                    <div class="cards">
+                        <div class="content-cards"></div>
+                    </div>
                 </div>
             </div>
         </div>
