basic sidebar styling

--- a/src/template.html
+++ b/src/template.html
@@ -50,18 +50,16 @@
                 </div>
             </nav>
             <div class="sidebar">
-                <div class="sidebar-item">
-                    <div class="icons-set">
-                        <i class="fas fa-crow"></i>
-                        <i class="fas fa-cat"></i>
-                        <i class="fas fa-bug"></i>
-                        <i class="fas fa-cog"></i>
-                        <i class="fas fa-cocktail"></i>
-                        <i class="fas fa-coffee in-use"></i>
-                        <i class="fas fa-book-dead"></i>
-                        <i class="fas fa-bomb"></i>
+                <div class="sidebar-items">
+                    <div class="item">
+                        <i class="fas fa-coffee"></i>
+                        <h4 class="item-name">Hello, World!</h4>
                     </div>
-                    <h4 class="item-name">Hello, World!</h4>
+                </div>
+                <div class="sidebar-actions">
+                    <i class="fa-solid fa-plus action" data-action="add"></i>
+                    <i class="fa-solid fa-wrench action" data-action="modify"></i>
+                    <i class="fa-solid fa-trash action" data-action="delete"></i>
                 </div>
             </div>
             <div class="content">
