update sidebar actions, classes

--- a/src/template.html
+++ b/src/template.html
@@ -52,7 +52,7 @@
             <div class="sidebar" id="sidebar">
                 <div class="sidebar-items">
                     <div class="item">
-                        <i class="fa-solid fa-fw fa-mug-saucer"></i>
+                        <i class="fa-fw fa-solid fa-mug-saucer"></i>
                         <h4 class="item-name">Hello, World!</h4>
                         <input type="text" class="item-input" minlength="1" maxlength="32" placeholder="An awesome project">
                     </div>
