prettier config and format

--- a/src/template.html
+++ b/src/template.html
@@ -2,22 +2,46 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> 
-        <script src="https://kit.fontawesome.com/78fefce92e.js" crossorigin="anonymous"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./favicon-16x16.png"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap"
+            rel="stylesheet"
+        />
+        <script
+            src="https://kit.fontawesome.com/78fefce92e.js"
+            crossorigin="anonymous"
+        ></script>
         <title>todo-list</title>
     </head>
     <body>
         <header class="header">
             <div class="logo-container">
                 <div class="logo">
-                    <img src="./images/logo.png" alt="checkmark-logo" class="logo-img"/>
+                    <img
+                        src="./images/logo.png"
+                        alt="checkmark-logo"
+                        class="logo-img"
+                    />
                     <h1 class="logo-text">Todo list</h1>
                 </div>
             </div>
@@ -54,18 +78,36 @@
                     <div class="item">
                         <i class="fa-fw fa-solid fa-mug-saucer"></i>
                         <h4 class="item-name">Hello, World!</h4>
-                        <input type="text" class="item-input" minlength="1" maxlength="32" placeholder="An awesome project">
+                        <input
+                            type="text"
+                            class="item-input"
+                            minlength="1"
+                            maxlength="32"
+                            placeholder="An awesome project"
+                        />
                     </div>
                 </div>
                 <div class="sidebar-actions">
                     <div class="main-actions">
                         <i class="fa-solid fa-plus action" id="action-add"></i>
-                        <i class="fa-solid fa-wrench action" id="action-modify"></i>
-                        <i class="fa-solid fa-trash action" id="action-delete"></i>
+                        <i
+                            class="fa-solid fa-wrench action"
+                            id="action-modify"
+                        ></i>
+                        <i
+                            class="fa-solid fa-trash action"
+                            id="action-delete"
+                        ></i>
                     </div>
                     <div class="edit-actions">
-                        <i class="fa-solid fa-floppy-disk action" id="action-save"></i>
-                        <i class="fa-solid fa-xmark action" id="action-cancel"></i>
+                        <i
+                            class="fa-solid fa-floppy-disk action"
+                            id="action-save"
+                        ></i>
+                        <i
+                            class="fa-solid fa-xmark action"
+                            id="action-cancel"
+                        ></i>
                     </div>
                 </div>
             </div>
